--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,94 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background: linear-gradient(90deg, #9B4376, #DBA5BA);
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 2.5rem;  
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 90%;  
+    max-width: 500px;  
+}
+
+.title {
+    margin-bottom: 1.5rem;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.row, .name {
+    display: flex;
+    gap: 1rem;
+
+}
+
+.column {
+    flex: 1;
+}
+
+.detail {
+    margin-bottom: 1rem;
+}
+
+h2 {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    box-sizing: border-box;
+}
+select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    box-sizing: border-box;
+    background-position: right 8px center;
+    padding-right: 28px;
+    margin-bottom: 10px;
+}
+
+.select-gender {
+    display: flex;
+    align-items: center;
+}
+
+.botton {
+    background-color: #6c7ae0; 
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    width: 100%;
+    max-width: 120px;  
+    margin-top: 10px;
+    align-items: flex-start;  
+   
+}
+
+.botton:hover {
+    background-color: #5a68d5; 
+}
