--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,8 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(90deg, #9B4376, #DBA5BA);
+    background: linear-gradient( #9B4376, #DBA5BA);
+    padding-right: 10rem;
 }
 
 .form-container {
@@ -15,8 +16,9 @@ body {
     padding: 2.5rem;  
     border-radius: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 90%;  
-    max-width: 500px;  
+    width: 120%;  
+    max-width: 700px;  
+    
 }
 
 .title {
@@ -33,7 +35,6 @@ body {
 .row, .name {
     display: flex;
     gap: 1rem;
-
 }
 
 .column {
@@ -51,19 +52,15 @@ h2 {
     font-weight: bold;
 }
 
-input {
+input, select {
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 7px;
     box-sizing: border-box;
 }
+
 select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 7px;
-    box-sizing: border-box;
     background-position: right 8px center;
     padding-right: 28px;
     margin-bottom: 10px;
@@ -74,7 +71,7 @@ select {
     align-items: center;
 }
 
-.botton {
+input[type="submit"] {
     background-color: #6c7ae0; 
     color: white;
     padding: 10px 20px;
@@ -85,10 +82,10 @@ select {
     width: 100%;
     max-width: 120px;  
     margin-top: 10px;
-    align-items: flex-start;  
-   
+    align-self: flex-start;  
+    cursor: pointer;
 }
 
-.botton:hover {
+input[type="submit"]:hover {
     background-color: #5a68d5; 
 }
