--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,2 +1,66 @@
-<h1>Registrations#new</h1>
-<p>Find me in app/views/registrations/new.html.erb</p>
+<%= form_with(model: @registration, local: true, url: registrations_create_path, class: "form") do |form| %>
+  <% if @registration.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@registration.errors.count, "error") %> ทำให้ไม่สามารถบันทึกข้อมูลได้:</h2>
+      <ul>
+        <% @registration.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="form-container">
+    <h1 class="title">Register Form</h1>
+    <div class="name">
+      <div class="column">
+        <div class="detail">
+          <h2>First name</h2>
+          <%= form.text_field :first_name, id: "firstName", required: true %>
+        </div>
+      </div>
+      <div class="column">
+        <div class="detail">
+          <h2>Last name</h2>
+          <%= form.text_field :last_name, id: "lastName", required: true %>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <div>
+          <h2>Birthday</h2>
+          <%= form.date_field :birthday, id: "birthday", required: true %>
+        </div>
+      </div>
+      <div class="column">
+        <div class="gender">
+          <h2>Gender</h2>
+          <div class="select-gender">
+            <%= form.radio_button :gender, 'male' %> male
+            <%= form.radio_button :gender, 'female' %> female
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <div class="detail">
+          <h2>Email</h2>
+          <%= form.email_field :email, id: "email", required: true %>
+        </div>
+      </div>
+      <div class="column">
+        <div class="detail">
+          <h2>Phone Number</h2>
+          <%= form.telephone_field :phone, id: "phone", required: true %>
+        </div>
+      </div>
+    </div>
+    <div class="column">
+      <h2>Subject</h2>
+      <%= form.select :subject, options_for_select([['เลือกตัวเลือก', ''], ['ตัวเลือกที่ 1', 'option1'], ['ตัวเลือกที่ 2', 'option2'], ['ตัวเลือกที่ 3', 'option3']]), {}, { required: true } %>
+    </div>
+    <%= form.submit 'Submit', class: 'button' %>
+  </div>
+<% end %>
