--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="column">
-      <h2>Subject</h2>
+      <h2 class>Subject</h2>
       <%= form.select :subject, options_for_select([['เลือกตัวเลือก', ''], ['ตัวเลือกที่ 1', 'option1'], ['ตัวเลือกที่ 2', 'option2'], ['ตัวเลือกที่ 3', 'option3']]), {}, { required: true } %>
     </div>
     <%= form.submit 'Submit', class: 'button' %>
