--- a/app/assets/stylesheets/style-sheets.css
+++ b/app/assets/stylesheets/style-sheets.css
@@ -92,3 +92,11 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #5a68d5; 
 }
+
+.bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
