--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -11,6 +11,7 @@
   <% end %>
 
   <div class="form-container">
+<%= link_to 'ดูรายการลงทะเบียน', registrations_path %>
     <h1 class="title">Register Form</h1>
     <div class="name">
       <div class="column">
@@ -61,6 +62,9 @@
       <h2 class>Subject</h2>
       <%= form.select :subject, options_for_select([['เลือกตัวเลือก', ''], ['ตัวเลือกที่ 1', 'option1'], ['ตัวเลือกที่ 2', 'option2'], ['ตัวเลือกที่ 3', 'option3']]), {}, { required: true } %>
     </div>
+    <div class="bottom">
     <%= form.submit 'Submit', class: 'button' %>
+     <%# <%= link_to 'ไปยังหน้าก่อนหน้า', path_to_page %> %>
+    </div>
   </div>
 <% end %>
