design all list registration

--- a/app/assets/stylesheets/style-sheets.css
+++ b/app/assets/stylesheets/style-sheets.css
@@ -73,19 +73,16 @@ select {
 }
 
 
-
 input[type="submit"] {
     background-color: #6c7ae0; 
     color: white;
     padding: 10px 20px;
-    border: none;
     border-radius: 10px;
     font-size: 16px;
     font-weight: bold;
     width: 100%;
     max-width: 120px;  
     margin-top: 10px;
-    align-self: flex-start;  
     cursor: pointer;
 }
 
@@ -99,4 +96,42 @@ input[type="submit"]:hover {
     align-items: center;
     margin-top: 10px;
 }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  th, td {
+    padding: 10px;
+    text-align: left;
+    border: 1px solid #ccc;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+  }
+  
+  .new-registration {
+    display: inline-block;
+    background-color: #6a5acd; 
+    color: white;
+    text-decoration: none;
+    padding: 12px 24px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    width: 100%;
+    max-width: 120px;  
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .button-allList {
+    display: flex;
+  justify-content: flex-end;
+  }
 
+  
