--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -7,7 +7,7 @@
         <th>LastName</th>
         <th>Email</th>
         <th>Phone</th>
-        <th>Subject</th>
+        <th>Country</th>
       </div>
 
     <tbody>
