--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -8,6 +8,7 @@
         <th>Email</th>
         <th>Phone</th>
         <th>Country</th>
+        <th>delete</th>
       </div>
 
     <tbody>
@@ -18,6 +19,9 @@
           <td><%= registration.email %></td>
           <td><%= registration.phone %></td>
           <td><%= registration.subject %></td>
+          <td class="delete">
+             <%= button_to 'ลบ', registration_path(registration), method: :delete %>
+          </td>
         </tr>
       <% end %>
     </tbody>
