--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 
   <div class="form-container">
-<%= link_to 'ดูรายการลงทะเบียน', registrations_path %>
+<%= link_to raw('&#8592; all user'), registrations_path, class: 'gotoalluserpage' %>
     <h1 class="title">Register Form</h1>
     <div class="name">
       <div class="column">
