--- a/app/assets/stylesheets/style-sheets.css
+++ b/app/assets/stylesheets/style-sheets.css
@@ -20,9 +20,18 @@ body {
     max-width: 700px;  
     
 }
+.gotomainpage {
+    text-decoration: none;
+    font-size: 16px;
+}
+
+.gotomainpage:hover {
+    text-decoration: underline;
+    color: red;
+}
 .gotoalluserpage {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .gotoalluserpage:hover {
@@ -152,6 +161,43 @@ input[type="submit"]:hover {
     justify-content: center;
  }
 
- 
+ .main {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 2.5rem;  
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 120%;  
+    max-width: 700px;  
+    text-align: center;
+ }
+
+ .button-link {
+    margin-top: 30px;
+  }
+
+  
+  .primary-button {
+    background-color: #6a5acd;
+    color: white;
+    display: inline-block;
+    width: 100%;
+    padding-top:  20px;
+    padding-bottom: 20px;
+    margin: 0 10px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+  }
+
+  .primary-button:hover {
+    background-color: #5a68d5;
+    color: white;
+  }
+
+  
+  
+
 
 
