--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -21,6 +21,10 @@
           <td><%= registration.subject %></td>
           <td>
              <%= button_to 'ลบ', registration_path(registration), method: :delete %>
+            </td>
+            <td>
+              <%= link_to 'แก้ไข', edit_registration_path(registration), class: 'edit-button' %>
+            </td>
           </div>
         </tr>
       <% end %>
