--- a/app/assets/stylesheets/style-sheets.css
+++ b/app/assets/stylesheets/style-sheets.css
@@ -196,8 +196,35 @@ input[type="submit"]:hover {
     color: white;
   }
 
-  
-  
+  .edit-container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 2.5rem;  
+    border-radius: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 120%;  
+    max-width: 480px; 
+ }
 
+ .button-edit {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+  }
+  .field {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
 
+  .backtoalluserpage {
+    text-decoration: none;
+    font-size: 16px;
+  }
 
+  .backtoalluserpage:hover {
+    text-decoration: underline;
+    color: #f50606;
+  }
