--- a/app/assets/stylesheets/style-sheets.css
+++ b/app/assets/stylesheets/style-sheets.css
@@ -91,7 +91,7 @@ select {
 }
 
 
-input[type="submit"] {
+.button-submit {
     background-color: #6c7ae0; 
     color: white;
     padding: 10px 20px;
@@ -104,7 +104,7 @@ input[type="submit"] {
     cursor: pointer;
 }
 
-input[type="submit"]:hover {
+.button-submit:hover {
     background-color: #5a68d5; 
 }
 
@@ -211,12 +211,13 @@ input[type="submit"]:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .field {
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
+    margin-top: 10px;
   }
 
   .backtoalluserpage {
