--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="edit-container">
- <%= link_to 'กลับ', registrations_path, class: 'backtoalluserpage' %>
+ <%= link_to 'Back', registrations_path, class: 'backtoalluserpage' %>
   <h1>Edit registration information</h1>
 
   <%= form_with(model: @registration, local: true) do |form| %>
