--- a/app/views/registrations/main.html.erb
+++ b/app/views/registrations/main.html.erb
@@ -1,5 +1,5 @@
 <div class="main">
-    <h1> Welcome to registration form</h1>
+    <h1 class="main-tiltle"> Welcome to registration form</h1>
     <p> Please clicke register form</p>
 
     <div class="button-link">
