--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -5,6 +5,7 @@
       <head>
         <th>FirstName</th>
         <th>LastName</th>
+        <th>Birthday</th>
         <th>Email</th>
         <th>Phone</th>
         <th>Country</th>
@@ -17,6 +18,7 @@
         <div>
           <td><%= registration.first_name %></td>
           <td><%= registration.last_name %></td>
+           <td><%= registration.birthday %></td>
           <td><%= registration.email %></td>
           <td><%= registration.phone %></td>
           <td><%= registration.subject %></td>
