--- a/app/views/registrations/main.html.erb
+++ b/app/views/registrations/main.html.erb
@@ -3,6 +3,6 @@
     <p> Please clicke register form</p>
 
     <div class="button-link">
-        <%=link_to 'Register here', new_registration_path, class: 'primary-button'%>
+        <%= link_to 'Register here', new_registration_path, class: 'primary-button', data: { turbolinks: false } %>
     </div>
 </div>
