--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -1,6 +1,7 @@
+<%= turbo_frame_tag "modal-frame"%>
 <div class="form-container">
   <h1>All User</h1>
-
+    
   <table>
       <head>
         <th>FirstName</th>
@@ -23,7 +24,7 @@
           <td><%= registration.phone %></td>
           <td><%= registration.subject %></td>
           <td>
-             <%= button_to 'ลบ', confirm_delete_path(registration), method: :get, data: { turbo_frame: "modal_frame"}, class: 'delete-button' %>
+             <%= button_to 'ลบ', confirm_delete_path(registration), method: :get, data: { turbo_frame: "registrations_list"}, class: 'delete-button' %>
             </td>
             <td>
               <%= link_to 'แก้ไข', edit_registration_path(registration), class: 'edit-button' %>
@@ -38,4 +39,3 @@
   </div>
 </div>
 
-<%= turbo_frame_tag "modal_frame"%>
