--- a/app/views/registrations/confirm_delete.html.erb
+++ b/app/views/registrations/confirm_delete.html.erb
@@ -1,12 +1,4 @@
-<%= turbo_frame_tag "modal_frame" do %>
-  <div class="modal-overlay">
-    <div class="modal-content">
-      <h3>Confirm Delete</h3>
-      <p>Are you sure you want to delete</p>
-      <div class="delete-group-btn">
-        <%= button_to 'Delete', registration_path(@registration), method: :delete, class: 'btn btn-danger', data: { turbo_frame: '_top' } %>
-        <%= button_to 'Cancel', registrations_path, method: :get, class: 'btn btn-secondary' %>
-      </div>
-    </div>
-  </div>
+
+<%= turbo_frame_tag 'modal-frame' do %>
+  <%= render 'modal_delete', registration: @registration%>
 <% end %>
